試著做個分類
但失敗QQ

--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
 			</div>
 			<div class="tri fas fa-caret-down"></div>
 			<div  class="cata">
-				<span value="">League of Legend</span>
-				<span value="">Hearthstone</span>
-				<span value="">Auto Chess</span>
-				<span value="">others</span>
+				<span data-text="League of Legends">League of Legends</span>
+				<span data-text="Hearthstone">Hearthstone</span>
+				<span data-text="Dota 2">Dota 2</span>
+				<span data-text="Apex Legends">Apex Legends</span>
 			</div>
 		</div>
 	</header>
