做了分類以及搜尋

--- a/index.html
+++ b/index.html
@@ -21,6 +21,11 @@
 				<span data-text="Dota 2">Dota 2</span>
 				<span data-text="Apex Legends">Apex Legends</span>
 			</div>
+			<label class="search"">
+				<span class="seaBtn fas fa-search"></span>
+				<input class="seaText" type="text" placeholder="搜尋人名，遊戲名...">
+			</label>
+			
 		</div>
 	</header>
 	<div class="channel_list">
